[package]
name = "capsolver"
version = "0.1.2"
edition = "2021"
description = "CapSolver API SDK for rust"
readme = "README.md"
repository = "https://github.com/IrisDAnte/capsolver/"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.102"
openssl = { version = "0.10.55", features = ["vendored"] }
