[package]
name = "capsolver"
version = "0.4.1"
edition = "2021"
description = "CapSolver API SDK for rust"
readme = "README.md"
repository = "https://github.com/IrisDAnte/capsolver/"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.103"
tokio = { version = "1.29.1", features = ["full"] }
